refactor: Java 25 refinements for stateless monitor classes
- YCaseImporter: lambda RunnerComparator, var locals, stream improvements
- YCaseMonitoringService: toList(), var locals, collection factory methods

https://claude.ai/code/session_01Q6XzCtWk7ibKmErheFYANF